--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table>
     <tr>
       <td>
-        <img src="logo_corte.jpeg" alt="tak engineering logo">
+        <img src="/logo_corte.jpeg" alt="tak engineering logo">
       </td>
       <td>
         <h2>by Gabriel S. Lopes<h3><em>Mechanical Engineer<em></h3>
